--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   background-color: aqua;
 }
@@ -36,4 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
